--- a/papers.bib
+++ b/papers.bib
@@ -1,6 +1,6 @@
 @inproceedings{ho2018virtual,
   title={Virtual Occupancy Grid Map for Submap-based Pose Graph {SLAM} and Planning in 3{D} Environments},
-  author={Ho, Bing-Jui and Sodhi, Paloma and Teixeira, Pedro and Hsiao, Ming and \textbf{T. Kusnur} and Kaess, Michael},
+  author={Ho, Bing-Jui and Sodhi, Paloma and Teixeira, Pedro and Hsiao, Ming and Kusnur, Tushar and Kaess, Michael},
   booktitle={\textbf{IROS}},
   year={2018},
   link={https://www.ri.cmu.edu/wp-content/uploads/2018/09/Ho18iros.pdf}
@@ -8,69 +8,63 @@
 
 @inproceedings{kusnur2019planning,
   title={A Planning Framework for Persistent, Multi-{UAV} Coverage with Global Deconfliction},
-  author={\textbf{T. Kusnur} and Mukherjee, Shohin and Saxena, Dhruv Mauria and Fukami, Tomoya and Koyama, Takayuki and Salzman, Oren and Likhachev, Maxim},
+  author={Kusnur, Tushar and Mukherjee, Shohin and Saxena, Dhruv Mauria and Fukami, Tomoya and Koyama, Takayuki and Salzman, Oren and Likhachev, Maxim},
   booktitle={\textbf{FSR}},
   year={2019}
 }
 
 @inproceedings{kusnur2020search,
   title={Search-based Planning for Active Sensing in Goal-Directed Coverage Tasks},
-  author={\textbf{T. Kusnur} and Saxena, Dhruv Mauria and Likhachev, Maxim},
+  author={Kusnur, Tushar and Saxena, Dhruv Mauria and Likhachev, Maxim},
   booktitle={\textbf{ICRA}},
   year={2021}
 }
 
 @inproceedings{chatterjee2021fast,
   title={Fast Bounded Suboptimal Probabilistic Planning with Clear Preferences on Missing Information},
-  author={Chatterjee, Ishani and \textbf{T. Kusnur} and Likhachev, Maxim},
+  author={Chatterjee, Ishani and Kusnur, Tushar and Likhachev, Maxim},
   booktitle={\textbf{SoCS}},
   year={2021}
 }
 
 @inproceedings{saxena2021amra,
     title={{AMRA}*: Anytime Multi-Resolution Multi-Heuristic {A}*},
-    author={Saxena, Dhruv Mauria and \textbf{T. Kusnur} and Likhachev, Maxim},
+    author={Saxena, Dhruv Mauria and Kusnur, Tushar and Likhachev, Maxim},
     booktitle={\textbf{ICRA}},
     year={2022 (submitted)}
 }
 
 @inproceedings{kusnur2021frontier,
     title={Extending Frontier-based Coverage Planning to Incorporate Sweep-Pattern-based Coverage},
-    author={\textbf{T. Kusnur} and Likhachev, Maxim},
+    author={Kusnur, Tushar and Likhachev, Maxim},
     booktitle={\textbf{ICRA}},
     year={2022 (submitted)}
 }
 
-@inproceedings{ocrlproject,
-    title={Combining Search-based Planning and Trajectory Optimization for Perception-Aware Planning},
-    author={\textbf{T. Kusnur}},
-    year={16-745 class project, 2021}
-}
-
 @inproceedings{kusnur2018persistentRISS,
       title={Multi-{UAV} Persistent Coverage for Multiple Target Visitation Frequencies},
-      author={{Tushar Kusnur} and Maxim Likhachev},
+      author={Kusnur, Tushar and Likhachev, Maxim},
       year={2018},
       booktitle={RISS Working Papers Journal}
 }
 
 @inproceedings{naughton2019failureRISS,
       title={Learning to Use Contingency Maneuvers for Robot Navigation in Pedestrian Crowds},
-      author={Patrick Naughton and \textbf{T. Kusnur} and Ishani Chatterjee and Maxim Likhachev},
+      author={Naughton, Patrick and Kusnur, Tushar and Chatterjee, Ishani and Likhachev, Maxim},
       booktitle={RISS Working Papers Journal},
       year={2019}
 }
 
 @inproceedings{kumar2020multiRISS,
       title={Multi-Agent Pathfinding Maximizing Inter-Agent Distance},
-      author={Sahana Kumar and Ishani Chatterjee and {Tushar Kusnur} and Maxim Likhachev},
+      author={Kumar, Sahana and Chatterjee, Ishani and Kusnur, Tushar and Likhachev, Maxim},
       year={2020},
       booktitle={RISS Working Papers Journal}
 }
 
 @inproceedings{kusnur2018thesis,
       title={Degeneracy Detection in Loop-Closures for Underwater {SLAM}},
-      author={{Tushar Kusnur}},
+      author={Kusnur, Tushar},
       year={2018},
       organization={Birla Institute of Technology and Science, Undergraduate Thesis}
 }
