--- a/papers.bib
+++ b/papers.bib
@@ -1,7 +1,7 @@
 @inproceedings{ho2018virtual,
   title={Virtual Occupancy Grid Map for Submap-based Pose Graph {SLAM} and Planning in 3{D} Environments},
   author={Ho, Bing-Jui and Sodhi, Paloma and Teixeira, Pedro and Hsiao, Ming and Kusnur, Tushar and Kaess, Michael},
-  booktitle={IROS},
+  booktitle={IEEE International Conference on Intelligent Robots and Systems (IROS)},
   year={2018},
   link={https://www.ri.cmu.edu/wp-content/uploads/2018/09/Ho18iros.pdf}
 }
@@ -9,35 +9,35 @@
 @inproceedings{kusnur2019planning,
   title={A Planning Framework for Persistent, Multi-{UAV} Coverage with Global Deconfliction},
   author={Kusnur, Tushar and Mukherjee, Shohin and Saxena, Dhruv Mauria and Fukami, Tomoya and Koyama, Takayuki and Salzman, Oren and Likhachev, Maxim},
-  booktitle={FSR},
+  booktitle={International Conference on Field and Service Robotics (FSR)},
   year={2019}
 }
 
 @inproceedings{kusnur2020search,
   title={Search-based Planning for Active Sensing in Goal-Directed Coverage Tasks},
   author={Kusnur, Tushar and Saxena, Dhruv Mauria and Likhachev, Maxim},
-  booktitle={ICRA},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
   year={2021}
 }
 
 @inproceedings{chatterjee2021fast,
   title={Fast Bounded Suboptimal Probabilistic Planning with Clear Preferences on Missing Information},
   author={Chatterjee, Ishani and Kusnur, Tushar and Likhachev, Maxim},
-  booktitle={SoCS},
+  booktitle={International Symposium on Combinatorial Search (SoCS)},
   year={2021}
 }
 
 @inproceedings{saxena2021amra,
     title={{AMRA}*: Anytime Multi-Resolution Multi-Heuristic {A}*},
     author={Saxena, Dhruv Mauria and Kusnur, Tushar and Likhachev, Maxim},
-    booktitle={\textbf{ICRA}},
+    booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
     year={2022 (submitted)}
 }
 
 @inproceedings{kusnur2021frontier,
     title={Extending Frontier-based Coverage Planning to Incorporate Sweep-Pattern-based Coverage},
     author={Kusnur, Tushar and Likhachev, Maxim},
-    booktitle={ICRA},
+    booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
     year={2022 (submitted)}
 }
 
