--- a/papers.bib
+++ b/papers.bib
@@ -28,17 +28,17 @@
 }
 
 @inproceedings{saxena2021amra,
-    title={{AMRA}*: Anytime Multi-Resolution Multi-Heuristic {A}*},
+    title={{AMRA}*: Anytime Multi-Resolution Multi-Heuristic {A}* (submitted)},
     author={Saxena, Dhruv Mauria and Kusnur, Tushar and Likhachev, Maxim},
     booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
-    year={2022 (submitted)}
+    year={2022}
 }
 
 @inproceedings{kusnur2021frontier,
-    title={Extending Frontier-based Coverage Planning to Incorporate Sweep-Pattern-based Coverage},
+    title={Extending Frontier-based Coverage Planning to Incorporate Sweep-Pattern-based Coverage (submitted)},
     author={Kusnur, Tushar and Likhachev, Maxim},
     booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
-    year={2022 (submitted)}
+    year={2022}
 }
 
 @inproceedings{kusnur2018persistentRISS,
